feat: Added e2e tests for permission-ng

--- a/test/e2e/permission-ui/assets/demo.html
+++ b/test/e2e/permission-ui/assets/demo.html
@@ -7,8 +7,8 @@
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.js"></script>
-	<script src="../../../dist/angular-permission.js"></script>
-	<script src="../../../dist/angular-permission-ui.js"></script>
+	<script src="../../../../dist/angular-permission.js"></script>
+	<script src="../../../../dist/angular-permission-ui.js"></script>
 	<script src="demo.js"></script>
 </head>
 <body ng-app="app" ng-controller="appController as ctrl">
